samples/_failures_safe/1761183379_e630f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0c7db65.c: In function ‘main’:
./samples/SAFE/__tmp_f0c7db65.c:142:16: error: expected ‘)’ at end of input
  142 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_f0c7db65.c:142:5: error: too few arguments to function ‘add_edge’
  142 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_f0c7db65.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_f0c7db65.c:142:5: error: expected declaration or statement at end of input
  142 |     add_edge(&g
      |     ^~~~~~~~
